fix: aggregation for used space collecting
