# app/docs/swagger.json
@@ -162,7 +162,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handlers.HttpResponse-models_PublicUser-any"
+                            "$ref": "#/definitions/handlers.HttpResponse-models_UserPersonalInfo-any"
                         }
                     },
                     "403": {
@@ -905,11 +905,11 @@
                 "meta": {}
             }
         },
-        "handlers.HttpResponse-models_PublicUser-any": {
+        "handlers.HttpResponse-models_UserPersonalInfo-any": {
             "type": "object",
             "properties": {
                 "data": {
-                    "$ref": "#/definitions/models.PublicUser"
+                    "$ref": "#/definitions/models.UserPersonalInfo"
                 },
                 "meta": {}
             }
@@ -1160,6 +1160,35 @@
                 },
                 "profileUrl": {
                     "type": "string"
+                }
+            }
+        },
+        "models.UserPersonalInfo": {
+            "type": "object",
+            "properties": {
+                "avatarUrl": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "nickName": {
+                    "type": "string"
+                },
+                "profileUrl": {
+                    "type": "string"
+                },
+                "spaceLimit": {
+                    "type": "integer"
+                },
+                "usedSpace": {
+                    "type": "integer"
                 }
             }
         },
